# Contract-Analysis-Risk-Assessment-Bot

./: README.md  pyproject.toml  requirements.txt
src/: app.py
src/core/: extractor.py  intelligence.py  llm.py  logging_utils.py  prompts.py
