[project]
name = "guvi-hcl-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "fitz>=0.0.1.dev2",
    "fpdf>=1.7.2",
    "googletrans>=4.0.2",
    "openai>=2.16.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "streamlit>=1.53.1",
]
